fixed home page alignment issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -181,9 +181,24 @@ nav #searchBar #search-addon:hover {
   background-color: #E2C044;
 }
 
+.home-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .home-info {
   margin-top: 0.7rem;
   margin-bottom: 0.7rem;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 
 .home-info p {
@@ -192,11 +207,15 @@ nav #searchBar #search-addon:hover {
 }
 
 .home-pokemon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 0.5rem;
 }
 
 .home-pokemon-object {
